# kafka_cluster-topic-key_distribution_analyzer-tool

./: .gitignore  CHANGELOG.md  README.md  confluent_credentials.py  constants.py  pyproject.toml
.blog/: how-to-mitigate-hot-partitions-in-a-kafka-topic.md
src/: confluent_credentials.py  constants.py  key_data_skew_tester.py  key_distribution_analyzer.py  key_distribution_test.py  key_distribution_tester.py  tool.py  utilities.py
tests/: test_analyze_distribution.py  test_iam_client.py  test_partition_strategies.py  test_produce_test_records.py
