[project]
name = "kafka_cluster-topic-key-distribution-analyzer-tool"
version = "0.01.02.000"
description = "Kafka Topic Key Distribution Analyzer Tool"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Jeffrey Jonathan Jennings (J3)", email = "j3@thej3.com"},
]
maintainers = [
    {name = "Jeffrey Jonathan Jennings (J3)", email = "j3@thej3.com"},
]
dependencies = [
    "aws-clients-python-lib>=0.10.0.0",
    "cc-clients-python-lib>=0.30.3.0",
    "confluent-kafka>=2.11.1",
    "dotenv>=0.9.9",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "pytest>=8.4.2",
    "streamlit>=1.50.0",
    "watchdog>=6.0.0",
]
[tool.setuptools]
packages = ["src"]

# Logging configuration
[tool.logging]
version = 1
disable_existing_loggers = false

[tool.logging.formatters.default]
format = "%(asctime)s - %(levelname)s - %(funcName)s - %(message)s"
datefmt = "%Y-%m-%d %H:%M:%S"

[tool.logging.handlers.file]
class = "logging.FileHandler"
filename = "kafka_cluster-topic-key-distribution-analyzer-tool.log"
formatter = "default"
level = "INFO"
mode = "w"

[tool.logging.handlers.console]
class = "logging.StreamHandler"
formatter = "default"
level = "DEBUG"

[tool.logging.loggers.root]
level = "INFO"
handlers = ["file", "console"]

[tool.pytest.ini_options]
log_file = "kafka_cluster-topic-key-distribution-analyzer-tool.log"
log_file_level = "INFO"
log_file_format = "%(asctime)s - %(levelname)s - %(funcName)s - %(message)s"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
log_cli = 1
log_cli_level = "INFO"
log_cli_format = "%(asctime)s - %(levelname)s - %(funcName)s - %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
